--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <link rel="icon" href="./favicon.png" sizes="16x16" type="image/png">
 <!-- METATAGS made with http://www.metatags.org -->
 <meta charset="utf-8">
-<meta name="description" content="Ecumenic site-specific open-source collaborative contemporary apartisan philanthropic fair-trade ethic guided culture development art studio & opera company creator of The Ecumenic Times media.">
+<meta name="description" content="Ecumenic site-specific open-source crosscultural collaborative contemporary apartisan philanthropic fair-trade ethic guided dignified culture development art studio & opera company creator of The Ecumenic Times media. We develop in-field research-based sustainable auditorable artworks & operatic multimedia productions with an internationally awarded creative staff working in a reliability engineered git devops environment.">
 <meta name="keywords" content="art,culture,ecumenism,religion">
 <meta name="author" content="Ecumenic Creative Operations">
 <meta name='copyright' content="Creative Commons BY-NC-SA 4.0">
@@ -136,7 +136,7 @@ Artworks
 Galleries
 </a>
 <li>
-<a href="#" class="nav-link" target="_blank">
+<a href="https://www.saatchiart.com/ecumenic" class="nav-link" target="_blank">
 Buy Original Artworks
 </a>
 </li>
@@ -1689,7 +1689,7 @@ If this material is useful to you, <a href="#participate" class="page-scroll">he
 <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12" align=center>
 <div class="featured-box">
 <div class="featured-content">
-<a href="#" role="button" target="_blank">
+<a href="https://www.saatchiart.com/ecumenic" role="button" target="_blank">
 <img src="./img/artworks-1.png">
 <br>
 <h4>
@@ -1883,14 +1883,21 @@ Our Founder Profile:
 <div class="single-team">
 <div class="team-details">
 <div class="team-inner" align="justify">
-Through the <a id="modal-13" href="#modal-container-13" role="button" data-toggle="modal">professional path of our founder</a> and its resulting <a href="research" class="page-scroll">research</a> we envisioned a vast horizon of needed solidary works and creative industries under a worshipful to God <a href="#ecumenic" class="page-scroll">ecumenic</a> company that could foster a peacebuilding culture. To respond to the multilevel governance complexity implied in the lawful fair-trade stablishment of a respectful business enterprise we decided to merge the religious faithful congregational strategies to open-source development operations reliability engineering in our own <a href="#process" class="page-scroll">creative process</a>. The current Ecumenic Creative Operations mission is to fundament the possibility of a responsible visionary faithful art in accordance to the Holy Bible, the UN 2030 Agenda, and freedom of speech at the same time. 
+<b>
+<font size="+2">
+FOUNDATION:
+</font>
+</b>
 <br>
+<br>
+Through the <a id="modal-13" href="#modal-container-13" role="button" data-toggle="modal">professional path of our founder</a> and its resulting <a href="research" class="page-scroll">research</a> we envisioned a vast horizon of needed solidary works and creative industries under a worshipful to God <a href="#ecumenic" class="page-scroll">ecumenic</a> company that could foster a peacebuilding culture. To respond to the multilevel governance complexity implied in the lawful fair-trade stablishment of a respectful business enterprise we decided to merge the religious faithful congregational strategies to open-source development operations reliability engineering in our own <a href="#process" class="page-scroll">creative process</a>. The current Ecumenic Creative Operations mission is to fundament the possibility of a responsible visionary faithful art in accordance to the Holy Bible, the UN 2030 Agenda, and freedom of speech at the same time. 
 <br>
 <i style="float:right">[08.02.2019, Opera Day.]</i> 
 <br>
 <br>
-<br>
 <div align="center"><a id="modal-14" href="#modal-container-14" role="button" data-toggle="modal" class="page-scroll btn btn-common">Do You Want To Join Us?</a>
+&nbsp&nbsp
+<a href="#modal-container-22" role="button" data-toggle="modal" class="btn btn-common">Mailing List Subscription</a>
 </div>
 </div>
 </div>
@@ -1924,7 +1931,9 @@ There are too many people and issues in need of our assistance. There are so man
 ⚫ How can we safely scale our good actions and benchmark our errors fast?
 <br>
 <br>
-Please consider our overall <a href="#participate" class="page-scroll" onclick="$('#modal-container-14').modal('hide')">participation guidelines</a> making sure your don't want only to collaborate with us or contract one a flexible project from us. If this is not the case <a href="#contact" class="page-scroll" onclick="$('#modal-container-14').modal('hide')">contact us</a>.
+<div align="center">
+<a href="#participate" class="btn btn-common page-scroll" onclick="$('#modal-container-14').modal('hide')">Join Our Company</a>.
+</div>
 </div>
 </div>
 </div>
@@ -2047,7 +2056,7 @@ The Ecumenic Times
 <p class="section-subtitle">
 <i>Our community communication channels are devoted to foster the <a href="#participate" class="page-scroll">compassionate solidarity</a> of the <a href="#analysis" class="page-scroll">ecumenic ecosystem</a>.</i>
 <br>
-You are invited to <a href="#participate" class="page-scroll">participate</a> on our <a href="#artworks" class="page-scroll">projects</a> <a href="https://github.com/ecumenic" target="_blank">development</a> following our <a href="https://github.com/ecumenic/project/blob/master/README" target="_blank">general guidelines</a> and <a href="https://github.com/ecumenic/project/blob/master/CODE_OF_CONDUCT" target="_blank">code of conduct</a>.
+<a href="#modal-container-22" role="button" data-toggle="modal">Join our mailing list</a> & <a href="#participate" class="page-scroll">participate</a> on our <a href="#artworks" class="page-scroll">projects</a> <a href="https://github.com/ecumenic" target="_blank">development</a> following our <a href="https://github.com/ecumenic/project/blob/master/README" target="_blank">general guidelines</a> and <a href="https://github.com/ecumenic/project/blob/master/CODE_OF_CONDUCT" target="_blank">code of conduct</a>.
 <br>
 <i>(Click on the 8 icons below to open the channel in a new window.)</i>
 </p>
@@ -2731,35 +2740,31 @@ Contact Us
 </h2>
 <br>
 <p class="section-subtitle">
-Join our mailing list sending an email to <a href="mailto:ecumenic-subscribe@lists.riseup.net">ecumenic-subscribe@lists.riseup.net</a>
-<br>
-<br>
 </p>
 </div>
 <div class="row">          
 <!-- CONTACT FORM -->
-<div class="col-lg-9 col-md-9 col-xs-12">
+<div class="col-lg-9 col-md-9 col-sm-12 col-xs-12">
 <div class="contact-block">
 <form action="https://formspree.io/ecumenic@protonmail.com" method="POST">
 <div class="row">
-<div class="col-md-6 form-group">
+<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
 <input type="text" class="form-control" name="name" placeholder="Your Name">                                 
 </div>
-<div class="col-md-6 form-group">
+<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
 <input type="_replyto" placeholder="Your Email" class="form-control" name="email">
 </div>
 </div>
-<div class="col-md-12 form-group">
+<div class="col-md-12">
 <input type="text" placeholder="Subject" name="subject" class="form-control">
 </div>
-<div class="col-md-12 form-group"> 
+<div class="col-md-12"> 
 <textarea class="form-control" placeholder="Your Message" name="message" rows="7">
 </textarea>
 </div>
-<div class="submit-button" align="center">
+<div class=" col-md-12 submit-button" align="center">
 <button class="btn btn-common btn-effect" type="submit" value="Send">
 Send Message
-
 <br>
 <img src="./img/contact-1.png">
 </a>
@@ -2773,7 +2778,7 @@ Mailing List Subscription
 </a>
 <br>
 <font size="-2">
-Email Powered by <a href="https://protonmail.com" target="_blank">protonmail.com</a>&nbsp&nbsp&nbsp&nbsp|&nbsp&nbsp&nbsp&nbspMailing List Powered by <a href="https://riseup.net" target="_blank">riseup.net</a>
+Email Powered by <a href="https://protonmail.com" target="_blank">protonmail.com</a> & Mailing List Powered by <a href="https://riseup.net" target="_blank">riseup.net</a>
 </font>
 </div>
 </div>
@@ -2812,19 +2817,17 @@ Mailing List Subscription
 </button>
 </div>
 <div class="modal-body" align="center">
-To subscribe just email to <a href="mailto:ecumenic-subscribe@lists.riseup.net">ecumenic-subscribe@lists.riseup.net</a>.
 <br>
-Or visit the online form through the button below:
-<br>
-<br>
-<a class="btn btn-common btn-effect" href="https://lists.riseup.net/www/subscribe/ecumenic" target="blank">
-Online Subscription Webpage
-<br>
-<img src="./img/contact-2.png">
-</a>
+<form action="https://lists.riseup.net/www" method="post">
+<input  name="email" placeholder="Your Email"  size="30" class="form-control">
+<input type="hidden" name="list" value="ecumenic">
+<input type="hidden" name="action" value="subrequest">
+<input type="submit" name="action_subrequest" value="Subscribe" class="btn btn-common btn-effect">
 <br>
 <br>
-<a href="https://riseup.net/en/lists/list-user">If you have any question about our mailing list, please click here.</a>.
+Or simply email to <a href="mailto:ecumenic-subscribe@lists.riseup.net">ecumenic-subscribe@lists.riseup.net</a>.
+<br>
+<a href="https://riseup.net/en/lists/list-user" taqrget="_blank">If you have any question about our mailing list, please click here.</a>.
 <br>
 <br>
 <font size="-2">
@@ -2897,7 +2900,7 @@ Ecumenic Creative Operations
 <br>
 <a class=" page-scroll" href="#artworks">ARTWORKS</a>:&nbsp&nbsp&nbsp
 <font size="-1">
-<a href="#" class="" target="_blank">Buy Our Originals</a> | 
+<a href="https://www.saatchiart.com/ecumenic" class="" target="_blank">Buy Our Originals</a> | 
 <a href="#https://www.flickr.com/photos/ecumenic/albums/72157705676584281" target="_blank">Productions Portfolio</a> | 
 <a href="https://ecumenic.bandcamp.com" target="_blank">Music Albums</a> | 
 <a href="https://ecumenictimes.threadless.com/" target="_blank">Appareil Merchandise</a> | 
