--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
 <link rel="icon" href="./favicon.png" sizes="16x16" type="image/png">
 <!-- METATAGS made with http://www.metatags.org -->
 <meta charset="utf-8">
-<meta name="description" content="Ecumenic site-specific open-source crosscultural collaborative contemporary apartisan philanthropic fair-trade ethic guided dignified culture development art studio & opera company creator of The Ecumenic Times media. We develop in-field research-based sustainable auditorable artworks & operatic multimedia productions with an internationally awarded creative staff working in a reliability engineered git devops environment.">
+<meta name="description" content="◇ Dignified Interfaith Collaborative Fine-Arts ◇ Ecumenic site-specific open-source crosscultural collaborative contemporary apartisan philanthropic fair-trade ethic guided dignified culture development art studio & opera company creator of The Ecumenic Times media. We develop in-field research-based sustainable auditorable artworks & operatic multimedia productions with an internationally awarded creative staff working in a reliability engineered git devops environment.">
 <meta name="keywords" content="art,culture,ecumenism,religion">
 <meta name="author" content="Ecumenic Creative Operations">
 <meta name='copyright' content="Creative Commons BY-NC-SA 4.0">
 <meta name="robots" content="index, follow">
 <meta name="revisit-after" content="1 month">
+<meta property="og:image" content="./img/logo.png">
 <!-- BOOTSTRAP CSS made with http://uideck.com "Essence" Template -->
 <link rel="stylesheet" href="css/animate.css">
 <link rel="stylesheet" href="css/color-switcher.css">
@@ -250,7 +251,7 @@ Ecumenic Television YouTube
 </li>
 <li>
 <a href="https://github.com/ecumenic" class="nav-link" target="_blank">
-Ecumenic Applications IDE GitHub &nbsp&nbsp&nbsp&nbsp
+Ecumenic Applications IDE GitHub&nbsp&nbsp&nbsp&nbsp
 </a>
 </li>
 <li>
@@ -263,6 +264,11 @@ Ecumenic Presential Calendar
 Ecumenic Online Courses
 </a>
 </li>
+<li>
+<a href="#modal-container-22" role="button" data-toggle="modal" class="nav-link">
+Ecumenic Mailing List
+</a>
+</li>
 </ul>
 <!-- // Community Dropdown End -->
 </li>
@@ -273,7 +279,7 @@ Participate
 </li>
 <li>
 <a href="https://donorbox.org/ecumenic" class="custom-dbox-popup nav-link">
-Donate
+Donate&nbsp&nbsp
 </a>
 </li>
 <li class="nav-item">
@@ -286,7 +292,7 @@ Contact
 Translate
 </a>
 </li>
-</ul>              
+<!-- MENU CODA -->
 </div>
 </div>
 </nav> 
@@ -952,11 +958,13 @@ If this you can help us in this process or its automation, please <a href="#part
 <!-- EBOOK 1 -->
 <div class="featured-box col-lg-4 col-md-4 col-sm-12 col-xs-12">
 <div class="featured-content">
-<a href="#" target="_blank">
+<a href="https://github.com/ecumenic/project/blob/master/Ecumenic%20Creative%20Operations%20Project.pdf" target="_blank">
 <img src="./img/ebook-project.png">
 <br>
 <h4>
-Full Project With Analysis Report
+Project
+<br>
+(with Analysis Report)
 </h4>
 </a>
 </div>
@@ -995,8 +1003,10 @@ Learn More On Our Analysis Report
 </a>
 &nbsp&nbsp
 <a href="#artworks" class="btn btn-common btn-effect page-scroll">
-View Our Artworks
-</a> 
+Buy Our Artworks
+</a>
+&nbsp&nbsp
+<a href="https://donorbox.org/ecumenic" class="custom-dbox-popup btn btn-common btn-effect ">Sponsor Our Research</a>
 </div>
 </section>
 <!-- // Research End -->
@@ -2551,6 +2561,7 @@ Budget Engineering Instructions
 ⚫ Lawful Accountancy With Carbon Trail.<br>
 ⚫ Technicaly Assisted Error Provision Budget.<br>
 ⚫ Expected Billing & Feedback Expectations.<br>
+⚫ Ecologic Footprint Regenerative Measures.
 </div>
 </div>
 </div>
@@ -2818,21 +2829,20 @@ Mailing List Subscription
 </div>
 <div class="modal-body" align="center">
 <br>
-<form action="https://lists.riseup.net/www" method="post">
-<input  name="email" placeholder="Your Email"  size="30" class="form-control">
-<input type="hidden" name="list" value="ecumenic">
-<input type="hidden" name="action" value="subrequest">
-<input type="submit" name="action_subrequest" value="Subscribe" class="btn btn-common btn-effect">
+Simply email anything to <a href="mailto:ecumenic-subscribe@lists.riseup.net">ecumenic-subscribe@lists.riseup.net</a>.
 <br>
+You will receive a message from the SYMPLA server you have only to reply and you're in.
 <br>
-Or simply email to <a href="mailto:ecumenic-subscribe@lists.riseup.net">ecumenic-subscribe@lists.riseup.net</a>.
+or
 <br>
-<a href="https://riseup.net/en/lists/list-user" taqrget="_blank">If you have any question about our mailing list, please click here.</a>.
-<br>
+<a href="https://lists.riseup.net/www/subscribe/ecumenic" class="btn btn-common btn-effect" target="_blank">Subscribe Online (2 clicks away)</a>
 <br>
 <font size="-2">
 Powered by <a href="https://riseup.net" target="_blank">riseup.net</a>
 </font>
+<br>
+<br>
+<a href="https://riseup.net/en/lists/list-user" taqrget="_blank">If you have any question about our mailing list, please click here.</a>.
 </div>
 </div>
 </div>
