--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <meta name='copyright' content="Creative Commons BY-NC-SA 4.0">
 <meta name="robots" content="index, follow">
 <meta name="revisit-after" content="1 month">
-<meta property="og:image" content="./img/logo.png">
+<meta property="og:image" content="./img/logo-1.png">
 <!-- BOOTSTRAP CSS made with http://uideck.com "Essence" Template -->
 <link rel="stylesheet" href="css/animate.css">
 <link rel="stylesheet" href="css/color-switcher.css">
