--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
 <link rel="icon" href="./favicon.png" sizes="16x16" type="image/png">
 <!-- METATAGS made with http://www.metatags.org -->
 <meta charset="utf-8">
-<meta name="description" content="◇ Dignified Interfaith Collaborative Fine-Arts ◇ Ecumenic site-specific open-source crosscultural collaborative contemporary apartisan philanthropic fair-trade ethic guided dignified culture development art studio & opera company creator of The Ecumenic Times media. We develop in-field research-based sustainable auditorable artworks & operatic multimedia productions with an internationally awarded creative staff working in a reliability engineered git devops environment.">
+<meta name="description" content="◇ Ecumenic site-specific open-source crosscultural collaborative contemporary apartisan philanthropic fair-trade ethic guided dignified culture development art studio & opera company creator of The Ecumenic Times media. We develop in-field research-based sustainable auditorable artworks & operatic multimedia productions with an internationally awarded creative staff working in a reliability engineered git devops environment.">
 <meta name="keywords" content="art,culture,ecumenism,religion">
 <meta name="author" content="Ecumenic Creative Operations">
 <meta name='copyright' content="Creative Commons BY-NC-SA 4.0">
 <meta name="robots" content="index, follow">
 <meta name="revisit-after" content="1 month">
-<meta property="og:image" content="./img/logo-1.png">
+<meta property="og:image" content="./img/logo.jpg">
 <!-- BOOTSTRAP CSS made with http://uideck.com "Essence" Template -->
 <link rel="stylesheet" href="css/animate.css">
 <link rel="stylesheet" href="css/color-switcher.css">
