--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <meta charset="utf-8">
 <meta name="description" content="◇ Ecumenic site-specific open-source crosscultural collaborative contemporary apartisan philanthropic fair-trade ethic dignified development art studio & opera company creator of The Ecumenic Times media. We develop in-field research-based sustainable auditorable artworks & operatic multimedia productions with an internationally awarded creative staff working in a reliability engineered git devops environment.">
 <meta name="keywords" content="art,culture,ecumenism,religion">
+<meta name="accessibility" content="Please help us making this site more accesible according to ">
 <meta name="author" content="Ecumenic Creative Operations">
 <meta name='copyright' content="Creative Commons BY-NC-SA 4.0">
 <meta name="robots" content="index, follow">
@@ -1930,7 +1931,7 @@ There are too many people and issues in need of our assistance. There are so man
 <br>
 ⚫ How can we better worship God with all our talents and lives?<br>
 ⚫ How can we build a healthy development community without proselytism?<br>
-⚫ How can we discipline ou integral common ground joyfully happy?<br>
+⚫ How can we discipline our integral common ground joyfully happy?<br>
 ⚫ How can we stablish a company of examplar representants of diversity?<br>
 ⚫ How can we foster future peacebuilding ethic culture development?<br>
 ⚫ How can we optimize respectful cultural enterprise lawfulness?<br>
@@ -2360,7 +2361,7 @@ Collaborations We Need</a>
 <a href="https://ecumenic.typeform.com/to/yrdy3e" class="btn btn-common btn-effect" target="_blank">
 Apply For Our Community
 <br>
-<img src="./img/participate-3.png" alt="Collaboration octopus cat icon.>
+<img src="./img/participate-3.png" alt="Collaboration octopus cat icon.">
 </a>
 <br>
 <font size="-2">
