--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <link rel="icon" href="./favicon.png" sizes="16x16" type="image/png">
 <!-- METATAGS made with http://www.metatags.org -->
 <meta charset="utf-8">
-<meta name="description" content="◇ Ecumenic site-specific open-source crosscultural collaborative contemporary apartisan philanthropic fair-trade ethic dignified development art studio & opera company creator of The Ecumenic Times media. We develop in-field research-based sustainable auditorable artworks & operatic multimedia productions with an internationally awarded creative staff working in a reliability engineered git devops environment.">
+<meta name="description" content="◇ Universalist faith-inspired site-specific open-source crosscultural glocal faith actors fostering collaborative contemporary apartisan philanthropic fair-trade ethic dignified culture development art studio & opera company creator of The Ecumenic Times media. We develop in-field research-based sustainable auditorable artworks & operatic multimedia productions with an internationally awarded creative staff working in a reliability engineered git devops environment.">
 <meta name="keywords" content="art,culture,ecumenism,religion">
 <meta name="accessibility" content="Please help us making this site more accesible according to ">
 <meta name="author" content="Ecumenic Creative Operations">
@@ -503,7 +503,7 @@ This development operation makes our <a href="#artworks" class="page-scroll">art
 <br>
 ⚫ <i><b>Promotion:</i></b> Cultural Festivities & Calendars, Spiritual Tourism, Traditions Today, Dignified Diversity, Branding. 
 <br>
-⚫ <i><b>Ecumenic Counseling:</i></b> Churches Guides, Solidary Economy For Congregations, Church-Laic Interfaces.
+⚫ <i><b>Ecumenic Counseling:</i></b> Churches Guides, Solidary Economy For Congregations, Church-Laic Interfaces, Local Humanitarian Leaderships.
 <br>
 ⚫ <i><b>Music Supervision:</i></b> Careers Label, Voice Preparation, Musicking Orchestration, Arrangement, Record Production.
 <br>
@@ -973,7 +973,7 @@ Project
 <!-- EBOOK 2 -->
 <div class="featured-box col-lg-4 col-md-4 col-sm-12 col-xs-12">
 <div class="featured-content">
-<a href="#" target="_blank">
+<a href="https://github.com/ecumenic/project/blob/master/Ecumenic%20Creative%20Operations%20Trends%20Indicators%20Links%20Catalog.pdf" target="_blank">
 <img src="./img/ebook-trends.png" alt="Download Our Trends Indicators Catalog eBook">
 <br>
 <h4>
@@ -985,7 +985,7 @@ Trends Indicators Catalog
 <!-- EBOOK 3 -->
 <div class="featured-box col-lg-4 col-md-4 col-sm-12 col-xs-12">
 <div class="featured-content">
-<a href="#" target="_blank">
+<a href="https://github.com/ecumenic/project/blob/master/Ecumenic%20Creative%20Operations%20Program.pdf" target="_blank">
 <img src="./img/ebook-program.png" alt="Download Our responsible Creativity Program">
 <br>
 <h4>
@@ -1837,6 +1837,10 @@ GitHub
 <a href="https://www.linkedin.com/company/ecumenic" target="_blank">
 LinkedIn
 </a>
+<b> ◇ </b>
+<a href="https://github.com/ecumenic/project/blob/master/CODE_OF_CONDUCT" target="_blank">Code Of Conduct</a>
+<b> ◇ </b>
+<a href="#participate" class="page-scroll">Contracting Us</a>
 </p>
 <br>
 </div>
@@ -1905,12 +1909,32 @@ Through the <a id="modal-13" href="#modal-container-13" role="button" data-toggl
 <i style="float:right">[08.02.2019, Opera Day.]</i> 
 <br>
 <br>
-<div align="center"><a id="modal-14" href="#modal-container-14" role="button" data-toggle="modal" class="page-scroll btn btn-common">Do You Want To Join Us?</a>
+<b>
+<font size="+2">
+AUDITORSHIPS:
+</font>
+</b>
+<div align="center">
+<br>
+<br>
+<a href="https://github.com/ecumenic/project/blob/master/Religious%20Freedom%20Corporate%20Pledge.pdf" class="btn btn-common btn-effect" target="_blank">
+Religious Freedom Corporate Pledge
+<br>
+</a>
+<br>
+<font size="-2">
+Powered by <a href="https://religiousfreedomandbusiness.org">Religious Freedom & Business Foundation</a>
+</font>
+</div>
+</div>
+</div>
+</div>
+<div align="center">
+<br>
+<br>
+<a id="modal-14" href="#modal-container-14" role="button" data-toggle="modal" class="page-scroll btn btn-common">Do You Want To Join Us?</a>
 &nbsp&nbsp
 <a href="#modal-container-22" role="button" data-toggle="modal" class="btn btn-common">Mailing List Subscription</a>
-</div>
-</div>
-</div>
 </div>
 </div>
 <!-- COMPANY MODALBOX 14 -->
@@ -2491,6 +2515,7 @@ Briefing Instructions
 ⚫ <b>Tone:</b> What is the tone or image that suits the client’s message or brand? Are there certain colors or fonts that help communicate this? Ask the client to describe the tone, whether it’s sophisticated, fun, or bold, and for to share color, brand, or style guidelines.<br>
 ⚫ <b>Scheduling:</b> Having a timeline is critical for planning any project. Find out if there’s an advertising or publishing schedule you need to track against and solidify your deadlines are for each deliverable.<br>
 ⚫ <b>Assessing Competition:</b> Who is the competition and what do they offer? What makes your client unique? Understanding the competition can provide a clearer picture of where your client stands in the market, which will help you shape your campaign.
+⚫ <b>Business Religious Freedom Assesment Test</b>: You can also access <a href="https://crdatool.com/assessment">https://crdatool.com/assessment</a>, execute their test and send us your assessment for faster results.
 </div>
 </div>
 </div>
