--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <link rel="icon" href="./favicon.png" sizes="16x16" type="image/png">
 <!-- METATAGS made with http://www.metatags.org -->
 <meta charset="utf-8">
-<meta name="description" content="◇ Universalist faith-inspired site-specific open-source crosscultural glocal faith actors fostering collaborative contemporary apartisan philanthropic fair-trade ethic dignified culture development art studio & opera company creator of The Ecumenic Times media. We develop in-field research-based sustainable auditorable artworks & operatic multimedia productions with an internationally awarded creative staff working in a reliability engineered git devops environment.">
+<meta name="description" content="◇ Faith-inspired site-specific open-source crosscultural glocal faith actors fostering collaborative contemporary apartisan philanthropic fair-trade ethic dignified culture development art studio & opera company creator of The Ecumenic Times media. We develop in-field research-based sustainable auditorable artworks & operatic multimedia productions with an internationally awarded creative staff working in a reliability engineered git devops environment.">
 <meta name="keywords" content="art,culture,ecumenism,religion">
 <meta name="accessibility" content="Please help us making this site more accesible according to ">
 <meta name="author" content="Ecumenic Creative Operations">
