--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@ Translate
 <div class="carousel-item active">
 <img src="./img/presentation-1.jpg" alt="A grayscale satellite photography of the Milky Way galaxy in an open starry night." width="100%" height="650px">
 <div class="carousel-caption text-center">
-<img src="./img/logo-1.png" class="wow fadeInUp" data-wow-delay="0.1s" alt="Our Logo composed of the Roerich Pact peacebuilding culture lozenge emblem inside a Geneva Protocol III ecumenic assistance emblem above the United Nations olive branches.">
+<img src="./img/logo-1.png" class="wow fadeInUp" data-wow-delay="0.1s" alt="This educational artistic project logo is a tribute to the humanitarian movement (such as the Red Cross, WWF, & The Amnesty) in its initiative to propose a symbol for faith-based assistance without specific mention of religion in Geneva Protocol III (mentioned in the losange), to the UNESCO Roehrich Peace Culture Pact for artistic heritage protection (mentioned in the line circle with three filled smaller ones in it), and interreligious conflict-resolutions of the United Nations (mentioned in the olive branch).  In no way do we claim to be connected with these organizations and disallow the same, whenever possible clarifying the purpose of its resemblance and seeking to bring awareness to these global movements in such need of your help now.">
 <h2 class="wow fadeInUp" data-wow-delay="0.4s">
 Ecumenic Creative Operations
 </h2>
@@ -331,7 +331,7 @@ Learn More
 <div class="carousel-item">
 <img src="./img/presentation-2.jpg" alt="" width="100%" height="650px" alt="Hands join in a prayer circle.">
 <div class="carousel-caption text-center">
-<img src="./img/logo-2.png" class="wow fadeInUp" data-wow-delay="0.1s" alt="A musical keys heart in the manner of the Goodwill Legion ecumenic artistic charity institution logo among diverse religions emblems.">
+<img src="./img/logo-2.png" class="wow fadeInUp" data-wow-delay="0.1s" alt="A musical keys heart in the manner of the Goodwill Legion ecumenic artistic charity institution logo among diverse religions emblems. Please beware we have no connection to that social entity.">
 <h2 class="wow fadeInUp" data-wow-delay="0.4s">
 Ecumenic Ecosystem Research
 </h2> 
@@ -501,7 +501,7 @@ This development operation makes our <a href="#artworks" class="page-scroll">art
 <br>
 ⚫ <i><b>Consultancy:</i></b> Art Direction, Artwork Analysis, Database Planned Interventions, Business Coach & Team Training.
 <br>
-⚫ <i><b>Promotion:</i></b> Cultural Festivities & Calendars, Spiritual Tourism, Traditions Today, Dignified Diversity, Branding. 
+⚫ <i><b>Promotion:</i></b> Cultural Festivities & Calendars, Faith-Inspired Tourism, Traditions Today, Dignified Diversity, Branding. 
 <br>
 ⚫ <i><b>Ecumenic Counseling:</i></b> Churches Guides, Solidary Economy For Congregations, Church-Laic Interfaces, Local Humanitarian Leaderships.
 <br>
@@ -780,7 +780,7 @@ For more informations please view the charts in this page or in our project <a h
 ⚫ Foster collaborating communities self-managed interdependence.<br>
 ⚫ Technical & cutural production labour qualification and pubic creation.<br>
 ⚫ Processes, risks & priorities management anaysis optimization.<br>
-⚫ Local Regenerative Spiritual Tourism Implementation.<br> 
+⚫ Local Regenerative Faith-Inspired Tourism Implementation.<br> 
 </div>
 <div class="modal-footer"><br>
 <button type="button" class="btn btn-secondary" data-dismiss="modal">
@@ -1185,7 +1185,7 @@ Religiosity Problems
 <div class="modal-content">
 <div class="modal-header">
 <h5 class="modal-title" id="myModalLabel7">
-Spirituality & Religiosity Problems
+Faith-Inspired & Religiosity Problems
 </h5> 
 <button type="button" class="close" data-dismiss="modal">
 <span aria-hidden="true">×</span>
@@ -1208,7 +1208,7 @@ Spirituality & Religiosity Problems
 ⚫ New Religious Movements.<br>
 ⚫ Commodification Of Spirituality.<br>
 ⚫ Marketization Of Faith.<br>
-⚫ Overloaded Spiritual Labourers.<br>
+⚫ Overloaded Faith-Inspired Labourers.<br>
 ⚫ Unsustainability Of Congregations.<br>
 ⚫ Pseudo-Meritocratic Abuse of Power.<br>
 ⚫ Inflexible Traditions Obsolescence.<br>
@@ -1480,7 +1480,7 @@ Ecumenic Advancements
 ⚫ <a href="https://en.wikipedia.org/wiki/Category:Universities_and_colleges_by_religious_affiliation">Religious Universities</a>: Untold role in the history of science discovery.<br>
 ⚫ <a href="http://cecpensamento.com.br">Círculo Esotérico</a> & <a href="">Eubiose</a>:  Expansion of ordering to daily lives.<br>
 ⚫ <a href="https://www.ime.usp.br/~adolfo/aev/professorTKEnglish.htm">Macrobiotics</a> & <a href="http://www.korin.com.br">Korin</a>: Healthy ecologic ethic applied to food security.<br>
-⚫ <a href="https://www.watkinsmagazine.com/watkins-spiritual-100-list-2018">Watkin's Spiritual List</a>: Empowerment of world spiritual influencers.<br>
+⚫ <a href="https://www.watkinsmagazine.com/watkins-spiritual-100-list-2018">Watkin's Spiritual List</a>: Empowerment of world faith-inspired influencers.<br>
 ⚫ <a href="http://www.realitysandwich.com/">Reality Sandwich</a> & <a href="https://theshiftnetwork.com/">Shift</a>: Psychedelic network spiritual structuring.<br>
 ⚫ <a href="https://en.wikipedia.org/wiki/Wat_Rong_Khun">WatHongKhun Temple</a>: Superheroes-inclusive buddhist temple.<br>
 ⚫ <a href="https://www.facebook.com/frentedeevangelicos">Evangélicos Pelo Estado de Direito</a>: Protestants for rule of law.<br>
@@ -1515,7 +1515,7 @@ Close
 <img src="./img/research-7.png" alt="An ecumenic lozenge icon is circled by the triangular recycling symbol.">
 <br> 
 <h4>
-Spiritual Self-Sustainability Initiatives
+Faith-Inspired Self-Sustainability Initiatives
 </h4>
 </a>
 </div>
@@ -1527,7 +1527,7 @@ Spiritual Self-Sustainability Initiatives
 <div class="modal-content">
 <div class="modal-header">
 <h5 class="modal-title" id="myModalLabel11">
-Spiritual Self-Sustainable Initiatives
+Faith-Inspired Self-Sustainable Initiatives
 </h5> 
 <button type="button" class="close" data-dismiss="modal">
 <span aria-hidden="true">×</span>
@@ -1848,8 +1848,8 @@ LinkedIn
 <!-- COMPANY 1 -->
 <div class="col-lg-3 col-md-3 col-xs-12">
 <div class="single-team">
-<a href="./img/team-anonymous.png" target="_blank">
-<img src="./img/team-anonymous.png" alt="An anonymous figurea peace building ecumenic head.">
+<a href="#contact" class="page-scroll">
+<img src="./img/team-f.png" alt="An anonymous figurea peace building ecumenic head.">
 </a>
 <div class="team-details">
 <div class="team-inner">
@@ -1899,15 +1899,13 @@ Our Founder Profile:
 <div class="team-inner" align="justify">
 <b>
 <font size="+2">
-FOUNDATION:
+PROJECT STARTUP FOUNDATION:
 </font>
 </b>
-<br>
 <br>
 Through the <a id="modal-13" href="#modal-container-13" role="button" data-toggle="modal">professional path of our founder</a> and its resulting <a href="research" class="page-scroll">research</a> we envisioned a vast horizon of needed solidary works and creative industries under a worshipful to God <a href="#ecumenic" class="page-scroll">ecumenic</a> company that could foster a peacebuilding culture. To respond to the multilevel governance complexity implied in the lawful fair-trade stablishment of a respectful business enterprise we decided to merge the religious faithful congregational strategies to open-source development operations reliability engineering in our own <a href="#process" class="page-scroll">creative process</a>. The current Ecumenic Creative Operations mission is to fundament the possibility of a responsible visionary faithful art in accordance to the Holy Bible, the UN 2030 Agenda, and freedom of speech at the same time. 
 <br>
 <i style="float:right">[08.02.2019, Opera Day.]</i> 
-<br>
 <br>
 <b>
 <font size="+2">
@@ -1915,7 +1913,6 @@ AUDITORSHIPS:
 </font>
 </b>
 <div align="center">
-<br>
 <br>
 <a href="https://github.com/ecumenic/project/blob/master/Religious%20Freedom%20Corporate%20Pledge.pdf" class="btn btn-common btn-effect" target="_blank">
 Religious Freedom Corporate Pledge
@@ -1925,6 +1922,20 @@ Religious Freedom Corporate Pledge
 <font size="-2">
 Powered by <a href="https://religiousfreedomandbusiness.org">Religious Freedom & Business Foundation</a>
 </font>
+</div>
+<div align="justified">
+<br>
+<b>
+<font size="+2">
+ABOUT OUR LOGO:
+</font>
+</b>
+<br>
+This educational artistic project's <a href="./img/logo-1.png">logo</a> is a tribute to the <a href="https://en.wikipedia.org/wiki/Humanitarianism">humanitarian movement</a> (such as the <a href="https://www.icrc.org">Red Cross</a>, <a href="https://www.worldwildlife.org">WWF</a>, <a href="https://www.greenpeace.org">Greenpeace</a>, & <a href="https://www.amnesty.org">The Amnesty</a>) in its initiative to propose a symbol for faith-based assistance without specific mention of religion in <a href="https://en.wikipedia.org/wiki/Protocol_III">Geneva Protocol III</a> (mentioned in the losange), to the <a href="https://unesco.org">UNESCO</a> <a href="https://en.wikipedia.org/wiki/Roerich_Pact">Roerich Peace Culture Pact</a> for artistic heritage protection (mentioned in the line circle with three filled smaller ones in it), and interreligious conflict-resolutions of the <a href="https://news.un.org">United Nations</a> (mentioned in the olive branch). 
+<br>
+<i>
+It or any other in our project in no way claim connection to these organizations. Please regard this when exhibiting it, for we try to whenever possible clarify the purpose of this resemblance and seek to bring as much awareness to these global movements in real need of your help now.
+</i>
 </div>
 </div>
 </div>
@@ -2976,13 +2987,20 @@ Ecumenic Creative Operations
 </section>
 <!-- COPYRIGHT -->
 <section id="copyright">
-<div class="container" align="center">
+<div class="container row" align="center">
+<div class="col-md-5" align="right">
 <p>
 <a href="https://creativecommons.org/licenses/by-nc-sa/4.0">
 <img src="./img/cc-by-nc-sa.png" alt="Creative Commons Attribution-Non-Commercial Share-Alike 4.0 International License CC BY-NC-SA 4.0">
 </a>
-&nbsp&nbsp&nbspCrafted editing the <i><a href="http://uideck.com" rel="nofollow">UIdeck Essence Template</a></i> with <i><a href="https://thenounproject.com"> Noun Project Icons</a></i>, <i><a href="https://design.ubuntu.com/font"> Ubuntu Condensed Font</a></i> & <i><a href="https://commons.wikimedia.org/wiki/Main_Page">Wikimedia Photostock</a></i>.
+</div>
+<div class="col-md-7" align="left">
+Crafted editing the <i><a href="http://uideck.com" rel="nofollow">UIdeck Essence Template</a></i> with <i><a href="https://thenounproject.com"> Noun Project Icons</a></i>, <i><a href="https://design.ubuntu.com/font"> Ubuntu Condensed Font</a></i> & <i><a href="https://commons.wikimedia.org/wiki/Main_Page">Wikimedia Photostock</a></i>.
+<br>
+<a href="#company" class="page-scroll">Our own logo is a tribute. It or any other third-party in our projects in no way connect us with any of their organizations.</a>
+</i>
 </p>
+</div>
 </div>
 <!-- FOOTER CODA -->
 <div align="right">
