--- a/index.html
+++ b/index.html
@@ -51,11 +51,12 @@ Project
 </a>
 <!-- PROJECT DROPDOWN -->
 <ul class="dropdown">
-<li>
+<!-- <li>
 <a href="#trailer" class="nav-link page-scroll">
 Trailer Video
 </a>
 </li>
+-->
 <li>
 <a href="#project" class="nav-link page-scroll">
 Proposal Presentation
@@ -382,6 +383,7 @@ Next
 <!-- // Presentation Carousel End--> 
 
 <!-- VIDEO -->
+<!--
 <section id="trailer" class="video-promo section" style="background-attachment:fixed">
 <div class="overlay">
 </div>
@@ -389,7 +391,9 @@ Next
 <div class="row">
 <div class="col-md-12">
 <div class="video-promo-content text-center">
+-->
 <!-- Change video url in the jquery ".magnific-popup.min.js" directly. -->
+<!--
 <div>
 <br>
 <br>
@@ -408,6 +412,7 @@ Learn more about our project in this 33 minutes introductory video.
 </div>
 </div>
 </section>
+-->
 <!-- // Video End -->
 
 <!-- PROJECT -->
@@ -1743,6 +1748,8 @@ Music Albums
 </h4>
 </a>
 <font size="-2">
+Most Samples Powered by <a href="https://freesound.org">freesound.org</a>
+<br>
 Music Shop Powered by <a href="https://bandcamp.com" target="_blank">bandcamp.com</a>
 </font>
 </div>
