--- a/index.html
+++ b/index.html
@@ -2933,7 +2933,7 @@ Ecumenic Creative Operations
 <br>
 <a class="page-scroll" href="#project">PROJECT</a>:&nbsp&nbsp&nbsp
 <font size="-1">
-<a href="#trailer" class=" page-scroll">Trailer Video</a> | 
+<!-- <a href="#trailer" class=" page-scroll">Trailer Video</a> | --> 
 <a href="#ecumenic" class=" page-scroll">Ecumenic Creativity</a> | 
 <a href="#services" class=" page-scroll">Products & Services</a> | 
 <a href="#program" class=" page-scroll">Collaborative Program</a> | 
