--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@ Buy Original Artworks
 </a>
 </li>
 <li>
-<a href="https://www.flickr.com/photos/ecumenic/albums/72157705676584281" class="nav-link" target="_blank">
+<a href="https://www.flickr.com/photos/ecumenic/albums" class="nav-link" target="_blank">
 Productions Portfolio
 </a>
 </li>
@@ -1708,7 +1708,7 @@ If this material is useful to you, <a href="#participate" class="page-scroll">he
 <img src="./img/artworks-1.png" alt="Buy our artworks. We also produce tactile and sound sculptures on demand." >
 <br>
 <h4>
-Original Artworks
+Original Artworks Shop
 </h4>
 </a>
 <font size="-2">
@@ -1723,7 +1723,7 @@ Certification Powered by <a href="https://verisart.com">verisart.com</a>
 <div class="col-lg-2 col-md-4  col-sm-6 col-xs-12" align=center>
 <div class="featured-box">
 <div class="featured-content">
-<a href="https://www.flickr.com/photos/ecumenic/albums/72157705676584281" role="button" target="_blank">
+<a href="https://www.flickr.com/photos/ecumenic/albums" role="button" target="_blank">
 <img src="./img/artworks-2.png" alt="Read our company members cvs for more information.">
 <br>
 <h4>
