--- a/index.html
+++ b/index.html
@@ -952,7 +952,7 @@ Research
 <p class="section-subtitle">
 <i>Throughout <a href="#company" class="page-scroll">decades of experience</a> with many <a href="#partners" class="page-scroll">partners</a> we gathered an <a href="#ecumenic" class="page-scroll">ecumenic culture</a> <a href="https://github.com/ecumenic/project/blob/master/Documentation/Environmental%20Cultural%20Opera%20Trends.html">trends analysis report</a> with links.</i>
 <br> 
-It is composed of a big volume of statistic & news structured or not data which needs <a href="#participate" class="page-scroll">collaboration</a> for further studies.
+This <a href="https://en.unesco.org/oer">open educational resource</a> is composed of a big volume of statistic & news structured or not data which needs <a href="#participate" class="page-scroll">collaboration</a> for further studies.
 <br>
 If this you can help us in this process or its automation, please <a href="#participate" class="page-scroll">join</a> our <a href="#community" class="page-scroll">community</a> and(or) <a href="https://donorbox.org/ecumenic" class="custom-dbox-popup">sponsor our project</a>.
 <br>
