--- a/index.html
+++ b/index.html
@@ -506,9 +506,9 @@ This development operation makes our <a href="#artworks" class="page-scroll">art
 <br>
 ⚫ <i><b>Consultancy:</i></b> Art Direction, Artwork Analysis, Database Planned Interventions, Business Coach & Team Training.
 <br>
-⚫ <i><b>Promotion:</i></b> Cultural Festivities & Calendars, Faith-Inspired Tourism, Traditions Today, Dignified Diversity, Branding. 
+⚫ <i><b>Promotion:</i></b> Cultural Festivities & Calendars, Faith-Inspired Tourism, Traditions Today, Dignified Diversity, Branding, Micro-Heritages. 
 <br>
-⚫ <i><b>Ecumenic Counseling:</i></b> Churches Guides, Solidary Economy For Congregations, Church-Laic Interfaces, Local Humanitarian Leaderships.
+⚫ <i><b>Ecumenic Counseling:</i></b> Church Guides, Congregations Solidary Economy, Church-Laic Interfaces, Local Humanitarian Leaderships.
 <br>
 ⚫ <i><b>Music Supervision:</i></b> Careers Label, Voice Preparation, Musicking Orchestration, Arrangement, Record Production.
 <br>
@@ -1451,6 +1451,10 @@ Ecumenic Advancements
 <br>
 ⚫ <a href="https://universalhouseofjustice.bahai.org">Universal House Of Justice</a>: Baha'i global ethic juridic instance.<br>
 ⚫ <a href="https://www.parliamentofreligions.org">Parliament Of World's Religions</a>: First ecumenic meetings initiative.<br>
+⚫ <a href="https://religica.org">Religica</a> & <a href="http://www.theinterfaithobserver.org">The Interfaith Observer</a>: Interreligious networks & news.
+⚫ <a href="https://uri.org/what-we-do/charter">United Religions Initiative</a> and <a href="https://www.scarboromissions.ca/interfaith-dialogue/principles-and-guidelines-for-interfaith-dialogue"> Scarboro Mission</a>
+: Interfaith conduct jurisprudenial policies.
+⚫ <a href="faithcommongood.org">Faith For Common Good</a> <a href="https://www.faithcommongood.org/greening_sacred_spaces">Greening Sacred Spaces</a>: Interfaith ecology.
 ⚫ <a href="https://www.goetheanum.org">Goetheanum</a>: Anthroposophic study spiritual drama opera house.<br>
 ⚫ <a href="http://www.rothkochapel.org">Rothko Chapel</a>: Minimalist ecumenic chapel without symbols.<br>
 ⚫ <a href="https://rlp.hds.harvard.edu">Harvard Divinity</a>: Religious  violence & interreligious literacy MOOC.<br>
